# mongotui

./: 404.html  README.md  docker-compose.replicaset.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml
docs/: index.md
docs/features/: aggregation.md  databases.md  indexes.md  monitoring.md  users.md
docs/getting-started/: installation.md  quickstart.md
docs/overrides/: main.html
docs/reference/: configuration.md  shortcuts.md
features/aggregation/: index.html
features/databases/: index.html
features/indexes/: index.html
features/monitoring/: index.html
features/users/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
mongotui/: __main__.py  app.py  mongo.py
reference/configuration/: index.html
reference/shortcuts/: index.html
search/: search_index.json
