[project]
name = "mongotui"
version = "0.1.5"
description = "A modern terminal UI for MongoDB administration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0"}
keywords = ["mongodb", "tui", "terminal", "admin", "database"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "textual>=0.50.0",
    "pymongo>=4.6.0",
    "rich>=13.0.0",
    "textual-plotext>=0.2.0",
]

[project.scripts]
mongotui = "mongotui.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mongotui*"]
